# Remote-GUI

./: .dockerignore  .gitignore  CHANGELOG.md  CHANGELOG.txt  CONTRIBUTION.md  CONTRIBUTORS.md  Dockerfile  FEATURE_CONFIG_README.md  Makefile  README.md  README.production.build  VERSIONING.md  docker-compose.yaml  docker_builder.sh  et --hard 01176ce81cfdb18732b02566bd57699ab2b023a9  generate_version.py  image_builder.sh  package.json  requirements.txt  setup.cfg  start.sh
.github/scripts/: version_control.py
.github/workflows/: docker-builder.yml  generate_git_id.py  version-update-os-dev.yml
CLI/: run_server.py
CLI/local-cli-backend/: .gitignore  build-plugin.py  classes.py  feature_config.json  feature_config_loader.py  file_auth.py  file_auth_router.py  helpers.py  logging_config.py  main.py  parsers.py  plugins_router.py  reqs.txt  test_helpers_cpu_percent.py  test_parsers.py  version_info.py  zip_plugin.py
CLI/local-cli-backend/plugins/: README.md  engine.py  installer.py  loader.py  manager.py  plugin_order.json  plugin_order.json.bkup  refresh_frontend_apis.py  utils.py
CLI/local-cli-backend/security/: helpers.py
CLI/local-cli-backend/templates/: version_template.html
CLI/local-cli-backend/usr-mgm/: bookmarks.json  presets.json
CLI/local-cli-fe-full/: config.js  index.html  package-lock.json  package-react.json  package.json  vite.config.js
CLI/local-cli-fe-full/public/: config.template.js
CLI/local-cli-fe-full/scripts/: generateFederationExposes.js  hostFederationPlugins.js
scripts/: bump_version.py
templates/: version_template.html
(+179 files in other folders)
