[metadata]
name = Remote-GUI
version = 1.2.0 (pre-develop - 17123a [2026-06-30 01:47:48])
author = AnyLog Co.
contact = info@anylog.co
description = UI web-based admin interface for AnyLog & EdgeLake
license = Copyright AnyLog Co.
site = https://anylog.co
docs = https://github.com/AnyLog-co/documentation
source = https://github.com/AnyLog-co
