[metadata]
name = Remote-GUI
version = 1.2.0 (pre-develop - 5e52e1 [2026-06-30 03:59:50])
author = AnyLog Co.
contact = info@anylog.co
description = UI web-based admin interface for AnyLog & EdgeLake
license = Copyright AnyLog Co.
site = https://anylog.co
docs = https://github.com/AnyLog-co/documentation
source = https://github.com/AnyLog-co
