[metadata]
name = Remote-GUI
version = 1.2.0 (pre-develop - 7450c1 [2026-07-01 02:54:44])
author = AnyLog Co.
contact = info@anylog.co
description = UI web-based admin interface for AnyLog & EdgeLake
license = Copyright AnyLog Co.
site = https://anylog.co
docs = https://github.com/AnyLog-co/documentation
source = https://github.com/AnyLog-co
